# mylittlengsolve

1_Basic/: CMakeLists.txt
1_Basic/1_myFEM/: myElement.cpp  myElement.hpp  myFESpace.cpp  myFESpace.hpp  simple.py
2_Advanced/linhyp/: CMakeLists.txt  linhyp.py  linhypDG.cpp  run  square_h0.02.vol
